bug fix - preloader centered on safari

--- a/css/style.css
+++ b/css/style.css
@@ -624,6 +624,7 @@ li:hover {
 .loader .spinner-border {
 	position: absolute;
 	top: 50%;
+	left: 50%;
 } 
 
 
